[package]
name = "unclek"
version = "0.1.0"
authors = ["Aleksey Vorona <voronaam@gmail.com>"]

[dependencies]
nom = "3.2.0"
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
futures-cpupool = "0.1"

r2d2 = "0.7"
r2d2_postgres = "0.13"

log = "0.3.8"
pretty_env_logger = "0.1.1"

hostname = "0.1"
