[package]
name = "unclek"
version = "0.1.0"
authors = ["Aleksey Vorona <voronaam@gmail.com>"]

[dependencies]
nom = "3.2.0"
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-timer = "0.1"
tokio-service = "0.1"
futures-cpupool = "0.1"

r2d2 = "0.7"
r2d2_postgres = "0.13"

log = "0.3.8"
log4rs = "0.7.0"

hostname = "0.1"
crc = "^1.0.0"

config = "0.7"
serde_derive = "^1.0.8"
serde = "^1.0.8"
